@@ -45,9 +45,7 @@ public class SslConfigurationImpl implements SslConfiguration
     public static final boolean DEFAULT_USE_OPEN_SSL = true;
     public static final SecondBoundConfiguration DEFAULT_HANDSHAKE_TIMEOUT = SecondBoundConfiguration.parse("10s");
     public static final String DEFAULT_CLIENT_AUTH = "NONE";
-    public static final List<String> DEFAULT_SECURE_TRANSPORT_PROTOCOLS
-    = Collections.unmodifiableList(Arrays.asList("TLSv1.2", "TLSv1.3"));
-
+    public static final List<String> DEFAULT_SECURE_TRANSPORT_PROTOCOLS = List.of("TLSv1.2", "TLSv1.3");
 
     @JsonProperty("enabled")
     protected final boolean enabled;
